--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "react-native-gesture-handler": "~1.6.1",
     "react-native-reanimated": "~1.9.0",
     "react-native-screens": "~2.9.0",
+    "react-native-skeleton-content": "^1.0.20",
     "react-native-unimodules": "~0.10.1",
-    "react-native-web": "~0.11.7",
-    "react-native-vector-icons": "^6.6.0"
+    "react-native-vector-icons": "^6.6.0",
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
